--- a/public/kanbas/KanbasNavigation/kanbasNavigation.css
+++ b/public/kanbas/KanbasNavigation/kanbasNavigation.css
@@ -1,12 +1,13 @@
 
-.wd-flex-row-container {
-    display: flex;
-}
-  
 .wd-kanbas-navigation {
-    min-height: 100vh; 
     background-color: black;
     width: 80px;
+    position: fixed;
+    top: 0; 
+    left: 0; 
+    bottom: 0;
+    padding-left: 0;
+    padding-right: 0;
 }
 
 .wd-kanbas-navigation .list-group {
