--- a/public/kanbas/dashboard/dashboard.css
+++ b/public/kanbas/dashboard/dashboard.css
@@ -1,5 +1,54 @@
-.wd-dashboard-container {
-    width: 100%;
+.wd-dashboard {
+    margin-left: 90px;
+    bottom: 0;
+    flex: 1;
 }
+
+.wd-padding-20 {
+    padding: 20px;
+}
+
+.wd-padding-30 {
+    padding-left: 30px;
+    padding-top: 0px;
+
+}
+
+.wd-courses .col {
+    width: 270px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-left: 15px;
+    margin-right: 15px;
+    padding:0px;
+}
+
+@media (max-width: 700px) {
+    .wd-courses .col {
+        width: 86%; 
+    }
+    /* .wd-courses .col .card {
+        height: 301.828px;
+    } */
+}
+
+
+.wd-flex-row-container {
+    display: flex;
+    flex-direction: row;
+  }
+
+.wd-width-75px {
+    width: 260px;
+}
+
+.colored-image {
+    width: 270px;
+    height: 150px;
+    background-color: #FF5733; 
+    border-top-left-radius: .25em; 
+    border-top-right-radius: .25em;
+}
+  
 
 
