--- a/public/kanbas/KanbasNavigation/kanbasNavigation.css
+++ b/public/kanbas/KanbasNavigation/kanbasNavigation.css
@@ -1,13 +1,10 @@
-
 .wd-kanbas-navigation {
     background-color: black;
     width: 80px;
-    position: fixed;
+    /* position: fixed;
     top: 0; 
     left: 0; 
-    bottom: 0;
-    padding-left: 0;
-    padding-right: 0;
+    bottom: 0; */
 }
 
 .wd-kanbas-navigation .list-group {
@@ -16,11 +13,11 @@
 
 .wd-kanbas-navigation .list-group-item {
     border: none;
-    background-color: black;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    padding-left: 0px;
+    background-color: black;  
     text-align: center;
+    padding:0px;
+    padding-top:5px;
+    padding-bottom:5px;
 }
 
 .wd-kanbas-navigation .list-group-item a {
@@ -38,7 +35,6 @@
     background-color: white;
 }
 
-
 .wd-kanbas-navigation .list-group-item.active a {
     color: red;
 }
@@ -54,88 +50,3 @@
 .wd-kanbas-navigation .list-group-item.active.account i {
     color: gray;
 }
-
-
-
-
-
-/* 
-.wd-kanbas-navigation {
-    width: 80px;
-    position: fixed;
-    left: 0px;
-    top: 0px;
-    height:100%;
-}
-
-.wd-kanbas-navigation .list-group {
-    border-radius: 0;
-}
-
-.wd-kanbas-navigation .list-group-item {
-    border: none;
-}
-
-.wd-kanbas-nagivation .list-group-item a {
-    text-decoration: none; 
-    color: white;
-    background-color: black;
-}
-
-.wd-kanbas-navigation .list-group-item i {
-    font-size: 40px;
-    color: red;
-} */
-
-
-/* 
-.wd-icon-link {
-    margin-top: 10px;
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.wd-icon-link a {
-}
-
-.wd-icon-link a:visited {
-    color:white;
-}
-
-.wd-icon-link i {
-    font-size: 40px;
-    color: red;
-}
-
-.wd-icon-link p {
-    color: white;
-    margin-top: 0px;
-    margin-bottom: 0px;
-    font-family:Arial, Helvetica, sans-serif;
-}
-
-.wd-icon-link-profile {
-    margin-top: 10px;
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.wd-icon-link-profile a {
-    text-decoration: none; 
-}
-
-.wd-icon-link-profile a:visited {
-    color:white;
-}
-
-.wd-icon-link-profile i {
-    font-size: 40px;
-    color: white;
-}
-
-.wd-icon-link-profile p {
-    color: white;
-    margin-top: 5px;
-    margin-bottom: 10px;
-    font-family:Arial, Helvetica, sans-serif;
-} */
